--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 
     </p>
     <H2> I am a student </H2>
+    <h1> i am codi9ng with computer </h1>
+    <h2> i live in Dhaka</h2>
 </body>
 </html>
