--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
     </p>
     <H2> I am a student </H2>
-    <h1> i am codi9ng with computer </h1>
-    <h2> i live in Dhaka</h2>
+ <p> i am from Dhaka Bangladesh</p>
 </body>
 </html>
